tweak to comment box on mobile, fixing a character issue

--- a/_sass/_comments.sass
+++ b/_sass/_comments.sass
@@ -9,3 +9,6 @@
 .juvia-container
   font-size: 10pt
 
+.juvia-textarea-field textarea
+  max-width: 100%
+
